--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    Hello, HTML!
+    <div>
+        <h1>Hello, HTML!</h1>
+        <br>
+        <img src="./images/dog1.jpg" alt="강아지" style="width:300px; height:300px;">
+
+    </div>
+    <div>
+        <ul>
+            <li><a href="https://kobalja2020.tistory.com/" title="kobalja의 블로그" target="_blank">kobalja의 블로그 바로가기</a>
+            </li>
+            <li>unordered list</li>
+            <li>unordered list</li>
+            <li>unordered list</li>
+            <li>unordered list</li>
+        </ul>
+        <ol>
+            <li>ordered llist</li>
+            <li>ordered llist</li>
+            <li>ordered llist</li>
+            <li>ordered llist</li>
+        </ol>
+        <dl>
+            <dt>kobalja</dt>
+            <dd><a href="https://kobalja2020.tistory.com/">노력하는 개발자</a></dd>
+        </dl>
+    </div>
 </body>
-</html>
