position:fixed 활용법  - position:fixed를 적용하면 그 요소는 viewport 기준으로 위치하게 된다.

--- a/CSS-BASIC/position/index.html
+++ b/CSS-BASIC/position/index.html
@@ -17,6 +17,13 @@
             <div class="child blue">Child</div>
         </div>
     </div>
+    <div class="grandparent2">
+        <div class="parent">
+            <div class="child green">Child.length</div>
+            <div class="child purple">Child</div>
+            <div class="child orange">Child</div>
+        </div>
+    </div>
 </body>
 
 </html>
